--- a/index.html
+++ b/index.html
@@ -94,13 +94,13 @@
 }
 .tweak-fixed-header .header .header-announcement-bar-wrapper {
 
-    background: linear-gradient(89.87deg, #000000 35.41%, #7FFF00 121.72%);
+    background: linear-gradient(89.87deg, #000000 35.41%, #001eff 121.72%);
 }
 .collection-type-products .ProductItem-details h1.ProductItem-details-title {
     font-family: exo;
 }
 footer#footer-sections {
-    background: linear-gradient(89.87deg, #000000 35.41%, #7FFF00 121.72%);
+    background: linear-gradient(89.87deg, #000000 35.41%, #001eff 121.72%);
     color: white;
     font-family: arial;
     text-align: center;
@@ -128,13 +128,13 @@ footer#footer-sections {
     padding: 13px 10px;
   }
   .login, .login-button {
-    background: linear-gradient(to bottom, #7FFF00 0%, #000000 100%);
-    border: 2px solid #7FFF00;
+    background: linear-gradient(to bottom, #001eff 0%, #000000 100%);
+    border: 2px solid #001eff;
     box-shadow: 0px 0px 3px #000;
   }
   .register, .register-button {
-    background: linear-gradient(to bottom, #7FFF00 0%, #000000 100%);
-    border: 2px solid #7FFF00;
+    background: linear-gradient(to bottom, #001eff 0%, #000000 100%);
+    border: 2px solid #001eff;
     box-shadow: 0px 0px 3px #000;
   }
         </style>
